- desk/gembind.c: Code cleanup: remove unnecessary global. (RFB)
- desk/deskact.c: Code cleanup: remove a few more ADDR() macros. (RFB)

2014-01-29
- bios/disk.c: Fix regression: ext2 partitions were not assigned
  (inaccessible) logical drives. (RFB)
- desk/deskmain.c desk/desksupp.c: Revert previous update which caused
  various problems with removable disks. (RFB)

2014-01-30
- bios/ide.c: Avoid using multi-sector i/o unless it's beneficial. (RFB)

2014-02-01
- aes/gemgsxif.c aes/gsx2.h: Eliminate redundant macro i_lptr1(). (RFB)
- aes/gemshlib.c aes/gsx2.h include/compat.h: Code cleanup: eliminate
  LLSET() compatibility macro. (RFB)
- aes/gemgsxif.c aes/gemoblib.c desk/deskapp.c include/compat.h: Code
  cleanup: eliminate LLGET() compatibility macro. (RFB)

2014-02-02
- aes/gemdos.c aes/gemdos.h aes/geminit.c aes/gemrslib.c desk/deskapp.c
  desk/deskdir.c: Change arg3 of dos_read()/dos_write() from LONG to
  void *. (RFB)
- bios/blkdev.c: Fix regression of 2014-01-09: mediachange was not set
  properly for SCSI bus (affects Aranym). (RFB)
- aes/gemdos.c aes/gemdos.h aes/gemfslib.c aes/geminit.c aes/gemsclib.c
  aes/gemshlib.c desk/deskdir.c desk/deskfpd.c: Code cleanup: change
  dos_sdta() arg from LONG to void *. (RFB)
- desk/aesbind.h desk/deskapp.h desk/gembind.c: Code cleanup: change
  arg1 of shel_get()/shel_put() from LONG to void *. (RFB)
- desk/deskfun.c desk/deskmain.c desk/desksupp.c: Code cleanup: remove
  unnecessary typecasts for wind_set() parameters. (RFB)
- desk/deskact.c desk/deskact.h desk/desksupp.c: Code cleanup: change
  arg2 of act_chg() from LONG to OBJECT *. (RFB)
- desk/deskact.c desk/deskact.h desk/desksupp.c: Code cleanup: change
  arg2 of act_allchg() from LONG to OBJECT *. (RFB)
- desk/deskact.c desk/deskact.h desk/deskmain.c: Code cleanup: change
  arg2 of act_bsclick() from LONG to OBJECT *. (RFB)
- desk/deskact.c desk/deskact.h desk/deskmain.c: Code cleanup: change
  arg2 of act_bdown() from LONG to OBJECT *. (RFB)